# workout

./: .gitignore  README.md  main.py  pyproject.toml  routes.py
atleta/: controller.py  models.py  schemas.py
categorias/: controller.py  models.py  schemas.py
centro_treinamento/: controller.py  models.py  schemas.py
configs/: database.py  settings.py
contrib/: dependencies.py
